# chainlit-mcp-client

./: .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  Procfile.bak  README.md  anthropic_app.py  app.py  app.py.14Apr948  app.py.good  app.py.save  app_openi.py  chainlit.md  cloudbuild.yaml  coffee_shop.db  create-gcloud-project.sh  deploy-coolify.sh  deploy-gcloud.sh  engagement_analysis.html  entrypoint.sh  example_chat_with_sqlite_mcp_server.html  fly.toml  gcloud-config.env  install.md  list_all_sql_and_table_state.html  new_o4_mini_in_action.html  pyproject.toml  requirements.txt  run-docker.sh  run-local.sh  run-remote.sh  run-sse.sh  run-stdio.sh
.chainlit/: config.toml
chainlit_mcp_client/: __init__.py  app.py  chainlit.md  models.py  settings_manager.py
chainlit_mcp_client/.chainlit/: config.toml
chainlit_mcp_client/public/: model_manager.js
examples/: engagement.sql  marketing.db  marketing.sql
html/: adding_customer_table.html  another_mcp_host.html  just_run_my_query.html
iframe/: index-chainlit-frame.html  index-chainlit-frame.html.bak  index.html  index.html.bak  index.html.good_prelimit  index.html.good_views  index.html.pre_reload_after_change
