[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chainlit-mcp-client"
version = "0.1.0"
requires-python = ">=3.13.0"
dependencies = [
    "chainlit",
    "openai", 
    "python-dotenv",
    "mcp"
]

[tool.setuptools]
py-modules = ["app"]
include-package-data = true

[tool.setuptools.package-data]
"" = [".chainlit/*", ".chainlit/**/*", "*.md"]
